Fixed menu container z-index

--- a/web/themes/custom/relaunch2018/css/global.css
+++ b/web/themes/custom/relaunch2018/css/global.css
@@ -7312,7 +7312,7 @@ body.path-user:not(.user-logged-in) .layout-container {
     top: 0;
     left: 0;
     visibility: hidden;
-    z-index: 1;
+    z-index: 5;
     transform: translate3d(-100%, 0, 0);
     transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1); }
     @media (max-width: 767.98px) {
