--- a/web/themes/custom/relaunch2018/scss/menu.scss
+++ b/web/themes/custom/relaunch2018/scss/menu.scss
@@ -85,7 +85,7 @@
     top: 0;
     left: 0;
     visibility: hidden;
-    z-index: 1;
+    z-index: 5;
 
     transform: translate3d(-100%, 0, 0);
     @include easeOut;
